Jojstick View update Added public and private constants; New method that helps drawing the joystick properly. New interface for handling events;

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,8 +12,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.forisz.android_joystick.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+    <com.forisz.joystick.view.Joystick
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:draw_mode="NO_BASE"
+
+        />
 </RelativeLayout>
