--- a/joystick/src/main/res/values/attrs.xml
+++ b/joystick/src/main/res/values/attrs.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="Joystick">
-        <attr name="draw_mode" format="enum">
+        <attr name="appearance" format="enum">
             <enum name="NORMAL" value="1"/>
             <enum name="NO_BASE" value="2"/>
             <enum name="INNER_CIRCLE_ONLY" value="3"/>
         </attr>
+        <attr name="behavior" format="enum">
+            <enum name="NORMAL" value="1"/>
+            <enum name="STATIC" value="2"/>
+        </attr>
+
+        <attr name="inner_circle_radius" format="dimension"/>
+        <attr name="outer_circle_radius" format="dimension"/>
+        <attr name="inner_circle_color" format="color" />
+        <attr name="outer_circle_color" format="color" />
     </declare-styleable>
 </resources>
