--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -6,16 +6,21 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="0dp"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
     tools:context="com.forisz.android_joystick.MainActivity">
 
     <com.forisz.joystick.view.Joystick
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:draw_mode="NO_BASE"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        app:outer_circle_color="#3e8bd9"
+        app:inner_circle_color="#13375b"
+        android:id="@+id/joystick"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:elevation="4dp"
+        android:layout_alignParentEnd="true"/>
 
-        />
 </RelativeLayout>
